Fixed NavBar spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -899,7 +899,7 @@ blockquote {
 .nav-link {
   position: relative;
   overflow: hidden;
-  padding: 21px 20px 20px;
+  padding: 21px 2% 20px;
   -webkit-transition: -webkit-transform 300ms ease;
   transition: -webkit-transform 300ms ease;
   transition: transform 300ms ease;
@@ -951,7 +951,7 @@ blockquote {
 
 @media screen and (min-width: 1300px) {
   .pad-nav {
-    padding-left: 50px;
+    padding-left: 80px;
   }
 }
 
